2003-09-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-structural-tag.c, cong-section-head-editor.c, cong-util.c, cong-util.h, xmlview.c

	Added prototype for the draw_blended_line function and moved to cong_util

2003-08-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-plugin.c, cong-plugin.h, plugin-docbook.c

	Improvements to text->DocBook importer

	* cong-document.c, cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-line.c, cong-error-file-open.c, cong-error-file-save.c, cong-plugin.c, cong-plugin.h, cong-primary-window.h, cong-util.c, cong-util.h, plugin-docbook.c, tree.c, xmldata.c, xmledit.c

	Fixed various warnings and prototype problems

	* cong-location.c

	Fixed bad parameter mismatch spotted by Pav Lucistnik
	
	* cong-location.c

	Added some bulletproofing to the get next/prev word routines for when the cursor is at the very end of a TEXT node
	
	* xmledit.c

	Fix for bug #115993
	
2003-08-29  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c

	Removed some debug logging

	* cong-document.c, cong-editor-area-flow-holder-inlines.c, cong-editor-widget3.c, plugin-lists.c, plugin-paragraph.c

	Removed some debug logging
	
	* cong-document.c, cong-util.c, cong-util.h, plugin-docbook.c

	Fix for bug #109869
	
2003-08-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c

	Big optimisation: only regenerate markup (and the subsequent activity) for selection changes that are significant to the result

	* cong-editor-area-text-fragment.c

	Cursor is now visible when in right-most position within a run of text

	* cong-document.c, cong-node.h, cong-util.c, cong-util.h, tree.c, xmldata.c

	Initial cursor placement, and placement of cursor when tags are added; some warnings fixed

	* cong-editor-widget3.c, cong-file-export.c, cong-file-open.c, cong-file-save.c, cong-tree-view.c